<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img"
        android:layout_width="340dp"
        android:layout_height="256dp"

        android:alpha=".5"
        android:contentDescription="@android:string/yes"

        android:src="@drawable/bitcoin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_to_btc_exchange"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="2sp"
        android:paddingTop="20sp"
        android:text="@string/mainText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sign_Up_btn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="@id/img"
        app:layout_constraintRight_toRightOf="@id/img"
        app:layout_constraintTop_toBottomOf="@+id/img"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mem_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_a_member"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_Up_btn" />

    <TextView
        android:id="@+id/sign_in_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/mem_text"
        app:layout_constraintRight_toRightOf="@id/mem_text"
        app:layout_constraintTop_toTopOf="@id/mem_text" />
</androidx.constraintlayout.widget.ConstraintLayout>