<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/topBg"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/top_curve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:src="@drawable/bitcoin"
        android:alpha=".5"
        app:layout_constraintTop_toTopOf="@id/topBg"
        app:layout_constraintBottom_toBottomOf="@id/topBg"
        app:layout_constraintLeft_toLeftOf="@id/topBg"
        app:layout_constraintRight_toRightOf="@id/topBg"
        />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/topBg"
        app:layout_constraintTop_toTopOf="@id/topBg"
        />
    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="290dp"
        android:text="@string/sign_in_now"
        android:textColor="@color/lightblue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <EditText
        android:id="@+id/inputBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:hint="@string/Dimmy_text"

        android:paddingStart="50dp"
        app:layout_constraintTop_toTopOf="@id/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5.75dp"
        android:src="@drawable/user"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintLeft_toLeftOf="@id/inputBox"
        app:layout_constraintRight_toRightOf="@id/inputBox"
        app:layout_constraintTop_toTopOf="@id/inputBox" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:hint="@string/password"
        android:paddingStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/inputBox"
        app:layout_constraintRight_toRightOf="@id/inputBox"
        app:layout_constraintTop_toTopOf="@id/inputBox"
        app:layout_constraintVertical_bias="0.165" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5.75dp"
        android:src="@drawable/padlock"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="@id/passwordBox"
        app:layout_constraintRight_toRightOf="@id/passwordBox"
        app:layout_constraintTop_toTopOf="@id/passwordBox" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="7.45dp"
        android:src="@drawable/view"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintRight_toRightOf="@id/passwordBox"
        app:layout_constraintLeft_toLeftOf="@id/passwordBox"
        app:layout_constraintTop_toTopOf="@id/passwordBox" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"

        app:layout_constraintTop_toBottomOf="@id/passwordBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/passwordBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias=".8"
        />

    <Button
        android:id="@+id/in_btn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:backgroundTint="@color/lightblue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/sign_Up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_hint"
        android:textColor="@color/lightblue"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
