<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/showNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@id/nameTextView"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/showPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintLeft_toRightOf="@id/passwordTextView"
                />
            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/passwordTextView"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/showEmailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"

                android:textSize="19sp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@id/emailTextView"
                app:layout_constraintTop_toBottomOf="@id/passwordTextView"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>